--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,16 @@
 cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDART ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 option(BUILD_EXAMPLES "Build examples" OFF)
 option(BUILD_TESTS "Build tests" OFF)
 
 project(tree)
+
+include_directories("${CMAKE_SOURCE_DIR}/include")
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
 add_library(tree STATIC ${CMAKE_CURRENT_SOURCE_DIR}/sources/tree.cpp)
 
 target_include_directories(tree PUBLIC
@@ -26,7 +30,7 @@ if(BUILD_EXAMPLES)
   endforeach(EXAMPLE_SOURCE ${EXAMPLE_SOURCES})
 endif()
 
-install(TARGETS tree
+install(TARGETS tree 
     EXPORT tree-config
     ARCHIVE DESTINATION lib
     LIBRARY DESTINATION lib
@@ -38,7 +42,13 @@ install(EXPORT tree-config DESTINATION cmake)
 if(BUILD_TESTS)
 enable_testing()
 file(GLOB ${PROJECT_NAME}_TEST_SOURCES tests/*.cpp)
+message(STATUS "PROJECT_NAME: [${PROJECT_NAME}]")
 add_executable(check ${${PROJECT_NAME}_TEST_SOURCES})
+message(STATUS "PROJECT_NAME_TEST_SOURCES: [${${PROJECT_NAME}_TEST_SOURCES}]")
+target_link_libraries(check tree ${DEPENDS_LIBRARIES})
 target_link_libraries(check ${PROJECT_NAME} ${DEPENDS_LIBRARIES})
+message(STATUS "DEPENDS LIBS: [${DEPENDS_LIBRARIES}]")
 add_test(NAME check COMMAND check "-s" "-r" "compact" "--use-colour" "yes")
 endif()
+
+
